# experimental-reasoning

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
plan/: velvet-riding-whale.md
scripts/: test_bixbench_batch.py  test_bixbench_parallel.py  test_bixbench_single.py  test_taubench_single.py
src/: __init__.py
src/adapters/: __init__.py  environment.py  model.py
src/benchmarks/: __init__.py  bixbench.py  cli_user_sim.py  evaluate.py  taubench.py
src/core/: __init__.py  agent.py  cmm.py  hypothesis.py  loop.py
src/formats/: __init__.py  engine.py
src/knowledge/: bioinformatics.py
src/tactics/: __init__.py  base.py
tests/: test_benchmarks.py  test_cmm.py  test_hypothesis.py  test_loop.py  test_model_adapter.py  test_tactics.py
